# LaboratorioFinale

./: .gitignore  CMakeLists.txt
include/: CycleDevice.h  Device.h  DomoticSystem.h  Interface.h  ManualDevice.h  Time.cpp  Time.h
src/: CycleDevice.cpp  Device.cpp  DomoticSystem.cpp  Interface.cpp  LogFile.txt  Logs_example1  Logs_example2  ManualDevice.cpp  Time.cpp  main.cpp  readme.txt
